hard-gists/6958459/run.log
=== Docker Run Log for 6958459 ===
Started at: Mi 29. Okt 16:45:20 CET 2025

[2025-10-29 16:45:21] START: Running container for 6958459
[2025-10-29 16:45:21] SUCCESS: Container 4b730e7f1146385187e7bfed332e5c398699832adf6573b3075c72fa0ce70736 started for 6958459
=== Container logs for 6958459 ===
  File "/snippet.py", line 90
    print np.allclose(ll11, -2.115, 1e-3)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6958459 ===
[2025-10-29 16:45:23] INFO: Container 4b730e7f1146385187e7bfed332e5c398699832adf6573b3075c72fa0ce70736 has stopped
